# ai-in-tg

./: README.md  pyproject.toml
app/: bot.py  notion.py  openai.py  openai_client.py
