[tool.poetry]
name = "ai-in-tg"
version = "0.1.0"
description = "Telegram bot with ChatGPT and Notion memory"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
python-telegram-bot = {extras = ["asyncio"], version = ">=20.0"}
openai = ">=1.0.0"
pydub = ">=0.25.1"
notion-client = ">=2.2.0"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "app.bot:main"

[[tool.poetry.packages]]
include = "app"
